--- a/frontend/src/components/Navbar/navbar.module.css
+++ b/frontend/src/components/Navbar/navbar.module.css
@@ -1,5 +1,4 @@
 .navbar {
-  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -10,13 +9,16 @@
   color: #fff;
 
   height: 100%;
-  max-width: 12%;
+  width: 16rem;
+  min-width: 16rem;
 
+  .bottom,
   .topbar {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 4rem;
+    gap: 2rem;
+    width: 100%;
   }
 
   .title {
@@ -32,23 +34,36 @@
     flex-direction: column;
     gap: 1rem;
     font-size: 1.4rem;
+  }
+}
 
-    .link {
-      display: flex;
-      align-items: center;
-      justify-content: start;
-      gap: 0.5rem;
+.link {
+  display: flex;
+  align-items: center;
+  justify-content: flext-start;
+  gap: 0.5rem;
 
-      text-decoration: none;
-      color: #fff;
-      transition: all 0.3s;
-      border-left: 3px solid transparent;
-      padding-left: 1rem;
+  text-decoration: none;
+  color: #fff;
+  transition: all 0.3s;
 
-      &:hover {
-        color: #8d90c4;
-        border-color: #8d90c4;
-      }
-    }
+  border-left: 3px solid transparent;
+  padding-left: 1rem;
+
+  &:hover {
+    color: #8d90c4;
+    border-color: #8d90c4;
+  }
+}
+
+.bottom {
+  font-size: 1.4rem;
+  gap: 0.3rem !important;
+
+  >span {
+    text-align: center;
+    font-size: 1.2rem;
+    color: #00d8ff;
+    font-weight: bold;
   }
 }
