--- a/frontend/src/pages/Sign/sign.module.css
+++ b/frontend/src/pages/Sign/sign.module.css
@@ -4,7 +4,8 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
 .webcamContainer {
