--- a/frontend/src/components/Navbar/navbar.module.css
+++ b/frontend/src/components/Navbar/navbar.module.css
@@ -1,28 +1,14 @@
 .navbar {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: center;
 
   padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
-
-  height: 100%;
-  width: 16rem;
-  min-width: 16rem;
-
-  .bottom,
-  .topbar {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 2rem;
-    width: 100%;
-  }
 
   .title {
-    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.4rem;
     font-weight: bold;
     text-align: right;
     color: #646cff;
@@ -31,39 +17,29 @@
 
   .links {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    font-size: 1.4rem;
-  }
-}
-
-.link {
-  display: flex;
-  align-items: center;
-  justify-content: flext-start;
-  gap: 0.5rem;
-
-  text-decoration: none;
-  color: #fff;
-  transition: all 0.3s;
-
-  border-left: 3px solid transparent;
-  padding-left: 1rem;
-
-  &:hover {
-    color: #8d90c4;
-    border-color: #8d90c4;
-  }
-}
-
-.bottom {
-  font-size: 1.4rem;
-  gap: 0.3rem !important;
-
-  >span {
-    text-align: center;
+    gap: 2rem;
     font-size: 1.2rem;
-    color: #00d8ff;
-    font-weight: bold;
+  }
+
+  .link {
+    display: flex;
+    align-items: center;
+    justify-content: flext-start;
+    gap: 0.5rem;
+
+    text-decoration: none;
+    color: #0c0c0c;
+    opacity: 0.6;
+
+    border-bottom: 3px solid transparent;
+
+    &:hover {
+      opacity: 0.8;
+    }
+
+    &.active {
+      opacity: 1;
+      border-color: #8d90c4;
+    }
   }
 }
